# computervision_homework

./: README.md  test.cpp  test_silvia
Lab 1 | OpenCV Hello world & more/: README.md  lab_one  lab_one.cpp  lab_one.hpp
Lab 1 | OpenCV Hello world & more/lab one.xcodeproj/: project.pbxproj
Lab 1 | OpenCV Hello world & more/lab one.xcodeproj/project.xcworkspace/xcuserdata/nicolalorenzon.xcuserdatad/: UserInterfaceState.xcuserstate
Lab 2 | Filters and histogram equalization/: lab_two  lab_two.cpp  lab_two.hpp  lab_two_task2.cpp  lab_two_task2.hpp  my_lib.cpp  my_lib.hpp
Lab 3 | Callback and color segmentation/: main  main.cpp  main.hpp
Lab 4 | Edge and line detection/: CMakeLists.txt  READ ME.txt  README.md
Lab 4 | Edge and line detection/src/: task1.cpp  task3.cpp  task4.cpp
Lab 5 | Segmentation/: CMakeLists.txt  README.md
Lab 5 | Segmentation/include/: utilities_functions.h
Lab 5 | Segmentation/src/: filters.cpp  filters.h  task1  task1.cpp  task2  task2.cpp  task3  task3.cpp  test  test.cpp  utilities_functions.cpp
Lab 6  Image matching-20230508/src/: task1  task1.cpp
utilities/: line for execute.rtf  setup xcode-opencv projects.rtf
